corrected jump points+background colour to h2

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,21 @@
+html {
+	box-sizing: border-box;
+}
+
+*, *::before, *::after {
+	box-sizing: inherit;
+}
+
 body{
 font-family: 'Merriweather', serif;
 }
 
+h1, h2 {
+	color: white;
+	background-color:#cd5b34;
+}
+
+header {
+	background-color: #cd5b34;
+	padding: 0.5em;
+}
